day-17/giropops-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: giropops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-deployment
  namespace: giropops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: giropops
  template:
    metadata:
      labels:
        app: giropops
    spec:
      containers:
        - name: giropops-container
          image: linuxtips/giropops-senhas:1.0
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: giropops-service
  namespace: giropops
spec:
  selector:
    app: giropops
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: giropops.cloud.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-service
            port:
              number: 5000
