day-17/02-netpol-allow-redis-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-app-only
  namespace: giropops
spec:
  podSelector: 
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: giropops
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: giropops
