day-17/05-netpol-allow-egress-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-redis
  namespace: giropops
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: giropops
          podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
