day-17/06-netpol-bock-ips.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ip-block
  namespace: giropops
spec:
  podSelector: {}
  policyTypes: 
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.5.0/24
            except:
              - 192.168.5.10/32
