day-17/netpol-block-ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-ingress-from-namespace
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: giropops
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
